[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemies/guardian_golem_energy_grenade.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/GuardianGolemEnergyGrenade.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/guardian_golem_energy_grenade_glowing.png" type="Texture" id=3]
[ext_resource path="res://assets/misc/light_circle.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0

[sub_resource type="CircleShape2D" id=2]
radius = 85.0

[sub_resource type="Animation" id=3]
resource_name = "Flicker"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnergyGrenadeSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnergyGrenadeGlowingSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 2.25098, 0, 1.39608, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Environment" id=4]
background_mode = 4
glow_enabled = true
glow_intensity = 1.5

[node name="GuardianGolemEnergyGrenade" type="RigidBody2D"]
collision_layer = 0
collision_mask = 17
mass = 12.0
gravity_scale = 9.8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionArea2D" type="Area2D" parent="." groups=["Enemy", "Hostile"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flicker = SubResource( 3 )

[node name="EnergyGrenadeSprite" type="Sprite" parent="."]
position = Vector2( 3.63798e-12, -1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="EnergyGrenadeGlowingSprite" type="Sprite" parent="."]
self_modulate = Color( 2.25098, 0, 1.39608, 1 )
position = Vector2( 1.52588e-05, -0.999998 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
energy = 0.25

[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
